# tts-local-llm

./: .gitignore  README.md  pyproject.toml
config/: example.yaml
docs/: chunking-workflow.md  github.md  lm-studio-wsl.md  pronunciation.md  reaper-workflow.md  setup.md  troubleshooting.md
docs/superpowers/plans/: 2026-06-20-local-tts-workbench.md
src/local_tts/: __init__.py  audio_export.py  chunker.py  cli.py  lmstudio_client.py  manifest.py  orpheus_decoder.py  pause_markup.py  pronunciation.py
tests/: test_chunker.py  test_manifest.py  test_pause_markup.py  test_pronunciation.py
