[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-tts-workbench"
version = "0.1.0"
description = "Local LM Studio + Orpheus TTS chunk generator for editable narration workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
audio = [
    "numpy>=1.26",
    "snac>=1.2",
    "torch",
]

[project.scripts]
local-tts = "local_tts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
